@@ -238,3 +238,5 @@ Rob Windsor
 Hilko Bengen
 Sven Nierlein
 Erik Wasser
+Tilman Koschnick
+Olivier 'Babar' Raginel
